# nebula-gtk

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  UX_ANALYSIS_REPORT.md  build.rs  package-lock.json  setup.sh
assets/applications/: tech.geektoshi.Nebula.desktop
data/: category_overrides.toml
src/: categories.rs  details.rs  helpers.rs  main.rs  mirrors.rs  settings.rs  types.rs
src/resources/: nebula.gresource.xml  style.css
src/spotlight/: cache.rs  categories.rs  metadata.rs  mod.rs  refresh.rs
src/state/: mod.rs  types.rs
src/state/controller/: app.rs  discover.rs  installed.rs  mod.rs  operations.rs  tools.rs  updates.rs
src/ui/: app.rs  discover.rs  installed.rs  mod.rs  operations.rs  theme.rs  tools.rs  updates.rs
src/waypoint/: detection.rs  mod.rs  snapshot.rs
src/xbps/: cache_cleanup.rs  commands.rs  mod.rs  parser.rs  privilege.rs
