[package]
name = "nebula-gtk"
version = "0.8.8"
edition = "2024"

[dependencies]
gtk4 = "0.8"
libadwaita = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feed-rs = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
anyhow = "1.0"
once_cell = "1.19"
regex = "1.11"
toml = "0.8"
walkdir = "2.5"

[[bin]]
name = "category_harvest"
path = "src/bin/category_harvest.rs"

[build-dependencies]
glib-build-tools = "0.17"
