[package]
name = "nebula-gtk"
version = "1.3.7"
edition = "2024"

[dependencies]
gtk4 = "0.10"
libadwaita = { version = "0.8", features = ["v1_4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feed-rs = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
anyhow = "1.0"
once_cell = "1.19"
phf = { version = "0.13", features = ["macros"] }
regex = "1.11"
toml = "0.9"
walkdir = "2.5"
zbus = { version = "4.0", features = ["blocking"] }

[[bin]]
name = "category_harvest"
path = "src/bin/category_harvest.rs"

[build-dependencies]
glib-build-tools = "0.21"
phf_codegen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
